--- a/doma/Views/Home/Index.cshtml
+++ b/doma/Views/Home/Index.cshtml
@@ -115,7 +115,7 @@
             <div class="box-body">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="item active" style="cursor:pointer;">
+                        <div class="item active" style="cursor:pointer;" ng-click="xembosanpham(product.id)">
                             <img ng-src="{{product.imgs[0].link}}">
                             <div class="carousel-caption">
                                 {{product.name}}
