--- a/doma/Views/Home/sanpham.cshtml
+++ b/doma/Views/Home/sanpham.cshtml
@@ -7,14 +7,14 @@
 
 <div class="box box-info" ng-controller="home_bosanpham_controller" data-ng-init="init(@Newtonsoft.Json.JsonConvert.SerializeObject(Model))">
     <div class="box-body row">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" ng-repeat="img in slide" data-slide-to="{{img.number}}" ng-class="img.number == 1? 'active': ''"></li>
                 </ol>
-                <div class="carousel-inner">
+                <div class="carousel-inner" style="text-align: center; max-height: 450px;">
                     <div ng-class="img.number == 0? 'item active': 'item'" ng-repeat="img in imgs track by img.number">
-                        <img ng-src="{{img.link}}" style="width:100%;">
+                        <img ng-src="{{img.link}}" style="cursor: -webkit-zoom-in; max-height: 450px; width: auto; display: block; margin-left: auto; margin-right: auto;" ng-click="showimage(img.link)">
                         <div class="carousel-caption">
                             {{img.caption}}
                         </div>
@@ -29,7 +29,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-8">
+        <div class="col-sm-6">
             <h3>@Model.Ten</h3>
             <p>Mô tả</p>
             <h4 style="color:red;">Đơn giá: {{price | number}} VNĐ</h4>
@@ -43,6 +43,6 @@
             <a class="btn btn-success" ng-click="themvaogiohang()">Thêm vào giỏ hàng</a>
         </div>
     </div>
-
 </div>
+
 
