--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -66,7 +66,17 @@
         </div>
 
         @Html.Partial("_footer")
-
+        <!-- Image -->
+        <div class="modal fade" id="_imagezoommodal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img id="_imagezoommdal_image" style="max-width: 100%; height: auto; width: auto\9; /* ie8 */" />
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
     </div><!-- ./wrapper -->
    
     
