--- a/doma/Views/Home/bosanpham.cshtml
+++ b/doma/Views/Home/bosanpham.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "bosanpham";
+    int id_item = Model.id;
 }
 <script src="~/scripts/my_js/home/home_bosanpham_controller.js"></script>
 
@@ -66,6 +67,22 @@
             </div>
             <a class="btn btn-success" ng-click="themvaogiohang()">Thêm vào giỏ hàng</a>
         </div>
-    </div>    
+    </div> 
+</div>
 
+<h4>
+    Sản phẩm khác
+</h4>
+<script src="~/scripts/my_js/home/relativeobjcet_controller.js"></script>
+<div ng-controller="relatedObject_controller" ng-init="init(@id_item, true)">
+    <div class="col-sm-2" ng-repeat="item in items">
+        <div class="box box-img" style="max-width:300px; cursor:pointer;" ng-click="xemsanpham(item.hreft)">
+            <div class="box-body">
+                <img ng-src="{{item.img}}" class="img-box" />
+            </div>
+            <div class="box-footer" style="text-align:center;">
+                <strong>{{item.name}}</strong>
+            </div>
+        </div>
+    </div>
 </div>
