--- a/doma/Views/Home/sanpham.cshtml
+++ b/doma/Views/Home/sanpham.cshtml
@@ -1,7 +1,10 @@
 ﻿@model doma.Controllers.SanPhamReturn
 
 @{
+    doma.Models.ProjectDMEntities db = new doma.Models.ProjectDMEntities();
     ViewBag.Title = Model.Ten;
+    List<doma.Models.BoSanPham> listrelate = db.BoSanPhams.ToList();
+    int id_item = Model.ID;
 }
 <script src="~/scripts/my_js/home/home_sanpham_controller.js"></script>
 
@@ -45,4 +48,19 @@
     </div>
 </div>
 
-
+<h4>
+    Bộ sản phẩm khác
+</h4>
+<script src="~/scripts/my_js/home/relativeobjcet_controller.js"></script>
+<div ng-controller="relatedObject_controller" ng-init="init(@id_item, false)">
+    <div class="col-sm-2" ng-repeat="item in items">
+        <div class="box box-img" style="max-width:300px; cursor:pointer;" ng-click="xemsanpham(item.hreft)">
+            <div class="box-body">
+                <img ng-src="{{item.img}}" class="img-box" />
+            </div>
+            <div class="box-footer" style="text-align:center;">
+                <strong>{{item.name}}</strong>
+            </div>
+        </div>
+    </div>
+</div>
