--- a/doma/Views/Home/bosanpham.cshtml
+++ b/doma/Views/Home/bosanpham.cshtml
@@ -9,13 +9,13 @@
 <div class="box box-info" ng-controller="home_bosanpham_controller" data-ng-init="init(@Newtonsoft.Json.JsonConvert.SerializeObject(Model))">
     <div class="box-body row">
         <div class="col-sm-6">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="text-align:center;">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" ng-repeat="img in slide" data-slide-to="{{img.number}}" ng-class="img.number == 1? 'active': ''"></li>
                 </ol>
                 <div class="carousel-inner" style="text-align: center; max-height: 450px;">
                     <div ng-class="img.number == 1? 'item active': 'item'" ng-repeat="img in slide track by img.number">
-                        <img ng-src=" {{img.link}}" style="cursor: -webkit-zoom-in; max-height: 450px; width: auto; display: block; margin-left: auto; margin-right: auto;" ng-click="showimage(img.link)">
+                        <img ng-src="{{img.link}}" style="cursor: -webkit-zoom-in; max-height: 450px; width: auto; display: block; margin-left: auto; margin-right: auto;" ng-click="showimage(img.link)">
                         <div class="carousel-caption">
                             {{img.caption}}
                         </div>
@@ -28,6 +28,7 @@
                 <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                     <span class="fa fa-angle-right"></span>
                 </a>
+                <small>Chọn vào hình để phóng to</small>
             </div>
         </div>
         <div class="col-sm-6">
