--- a/doma/Views/Home/sanpham.cshtml
+++ b/doma/Views/Home/sanpham.cshtml
@@ -11,7 +11,7 @@
 <div class="box box-info" ng-controller="home_bosanpham_controller" data-ng-init="init(@Newtonsoft.Json.JsonConvert.SerializeObject(Model))">
     <div class="box-body row">
         <div class="col-sm-6">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="text-align:center;">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" ng-repeat="img in slide" data-slide-to="{{img.number}}" ng-class="img.number == 1? 'active': ''"></li>
                 </ol>
@@ -30,6 +30,7 @@
                 <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                     <span class="fa fa-angle-right"></span>
                 </a>
+                <small>Chọn vào hình để phóng to</small>
             </div>
         </div>
         <div class="col-sm-6">
@@ -49,7 +50,7 @@
 </div>
 
 <h4>
-    Bộ sản phẩm khác
+    Xem thêm: Bộ sản phẩm chứa sản phẩm trên
 </h4>
 <script src="~/scripts/my_js/home/relativeobjcet_controller.js"></script>
 <div ng-controller="relatedObject_controller" ng-init="init(@id_item, false)">
