--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -55,11 +55,15 @@
     <div class="wrapper"> 
         @Html.Partial("_header_menu")
 
-        <div class="content-wrapper row">
+        <div class="content-wrapper row" >
             <div class="content">               
                 <div class="col-sm-12">
                     @RenderBody()
                     @Html.Partial("_gio_hang_modal")
+
+                    @*<div id="my_static_address" class="btn btn-success" style="width: 70%; position: fixed; bottom: 0px; margin-left: 15%; margin-right: 15%; background-color: #DDEBFC; color: #000000;">
+                        Chuyên sản xuất các mặt hàng tạ mộ, cúng đất. Đặc biệt các mặt hàng khó như các loại xe, nhà, đồ gia dụng. <br />Xin liên hệ <strong>0914 205 316</strong> gặp anh <strong>Bỉnh</strong>
+                    </div>*@
                 </div>
             </div><!-- /.content-wrapper -->
           
