--- a/doma/Views/Shared/_footer.cshtml
+++ b/doma/Views/Shared/_footer.cshtml
@@ -1,6 +1,7 @@
-﻿<footer class="main-footer">
-    <div class="pull-right hidden-xs">
-        <b>Version</b> 2.0
-    </div>
+﻿<footer class="main-footer" style="text-align:center;">
+    <p>
+        Chuyên sản xuất các mặt hàng tạ mộ, cúng đất. Đặc biệt các mặt hàng khó như các loại xe, nhà, đồ gia dụng. <br />Xin liên hệ <strong>0914 205 316</strong> gặp anh <strong>Bỉnh
+    </p>
+    <br />
     <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
 </footer>
