--- a/doma/Views/Shared/_header_menu.cshtml
+++ b/doma/Views/Shared/_header_menu.cshtml
@@ -10,7 +10,7 @@
 }
 <header class="main-header" ng-controller="cart_controller as controller">
     <!-- Logo -->
-    <a href="../../Home" class="logo">Hàng Mã Hiếu Thắng</a>
+    <a href="../../Home" class="logo">Hàng Mã <strong>Bỉnh Phương</strong></a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
         <div class="navbar-custom-menu">
