--- a/doma/Views/Home/sanpham.cshtml
+++ b/doma/Views/Home/sanpham.cshtml
@@ -65,3 +65,19 @@
         </div>
     </div>
 </div>
+
+<h4>
+    Sản phẩm khác
+</h4>
+<div ng-controller="relatedObject_controller" ng-init="init(@id_item, false, true)">
+    <div class="col-sm-2" ng-repeat="item in items">
+        <div class="box box-img" style="max-width:300px; cursor:pointer;" ng-click="xemsanpham(item.hreft)">
+            <div class="box-body">
+                <img ng-src="{{item.img}}" class="img-box" />
+            </div>
+            <div class="box-footer" style="text-align:center;">
+                <strong>{{item.name}}</strong>
+            </div>
+        </div>
+    </div>
+</div>
