--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -51,22 +51,22 @@
   
 
 </head>
-<body class="skin-blue sidebar-collapse" ng-app="main_app">
-    <div class="wrapper"> 
+<body class="skin-blue sidebar-collapse fixed" ng-app="main_app">
+    <div class="wrapper">
         @Html.Partial("_header_menu")
 
-        <div class="content-wrapper row" >
-            <div class="content">               
+        <div class="content-wrapper row">
+            <div class="content">
                 <div class="col-sm-12">
                     @RenderBody()
                     @Html.Partial("_gio_hang_modal")
 
                     @*<div id="my_static_address" class="btn btn-success" style="width: 70%; position: fixed; bottom: 0px; margin-left: 15%; margin-right: 15%; background-color: #DDEBFC; color: #000000;">
-                        Chuyên sản xuất các mặt hàng tạ mộ, cúng đất. Đặc biệt các mặt hàng khó như các loại xe, nhà, đồ gia dụng. <br />Xin liên hệ <strong>0914 205 316</strong> gặp anh <strong>Bỉnh</strong>
-                    </div>*@
+                            Chuyên sản xuất các mặt hàng tạ mộ, cúng đất. Đặc biệt các mặt hàng khó như các loại xe, nhà, đồ gia dụng. <br />Xin liên hệ <strong>0914 205 316</strong> gặp anh <strong>Bỉnh</strong>
+                        </div>*@
                 </div>
             </div><!-- /.content-wrapper -->
-          
+
         </div>
 
         @Html.Partial("_footer")
@@ -82,8 +82,8 @@
         </div>
         <!-- /.modal -->
     </div><!-- ./wrapper -->
-   
-    
+
+
     <script>
         $.widget.bridge('uibutton', $.ui.button);
         function redirectgiohang() {
