--- a/doma/Views/Shared/_footer.cshtml
+++ b/doma/Views/Shared/_footer.cshtml
@@ -2,5 +2,6 @@
     <p>
         Chuyên sản xuất các mặt hàng tạ mộ, cúng đất. Đặc biệt các mặt hàng khó như các loại xe, nhà, đồ gia dụng. <br />Xin liên hệ <strong>0914 205 316</strong> gặp anh <strong>Bỉnh
     </p>
+    <p>Email người phát triển: hieuntp2@gmail.com</p>
     <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
 </footer>
